# DJVULibRust

./: Cargo.toml  DjVu3Spec.txt  README.md  cargo.toml  color_checker.py  debug_ycbcr.py  working.djvu
docs/: djvu_doc.md  djvu_spec.md
examples/: blue_test_fresh.rs  comprehensive_dc_test.rs  dc_test_with_shift.rs  debug_2x2_solid.rs  debug_8x8_levels.rs  debug_dc_issue.rs  debug_detailed_transform.rs  debug_level_by_level.rs  debug_transform_detailed.rs  debug_transform_simple.rs  debug_update_manual.rs  debug_update_step.rs  djvu_single_page_test.rs  djvu_termination_test.rs  encode_solid_4x4.rs  single_page_djvu_test.rs  test_mirror.rs  test_mirror_debug.rs
src/: arithmetic_coder.rs  arithtable.rs  lib.rs
src/annotations/: annotations.rs  hidden_text.rs  mod.rs  string.rs
src/doc/: builder.rs  djvu_dir.rs  djvu_doceditor.rs  djvu_document.rs  djvu_nav.rs  document_encoder.rs  encoder.rs  mod.rs  page_collection.rs  page_encoder.rs  shared_dict_builder.rs
src/encode/: arithtable.rs  mod.rs
src/encode/iw44/: codec.rs  coeff_map.rs  constants.rs  encoder.rs  filters.cpp  huffman.rs  masking.rs  mod.rs  tests.rs  transform.rs  zigzag.rs
src/iff/: bs_byte_stream.rs  byte_stream.rs  bzz.rs  chunk_tree.rs  data_pool.rs  iff.rs  mod.rs
src/image/: coefficients.rs  geom.rs  image_formats.rs  mod.rs  palette.rs
src/util/: mod.rs  write_ext.rs
src/utils/: color_checker.rs  error.rs  file_path.rs  log.rs  mod.rs  progress.rs
src/validate/: validate.rs
src/zp_codec/: mod.rs
tests/: encoding_accuracy_tests.rs  integration_tests.rs  iw44_encoding_tests.rs
(+19 files in other folders)
